--- a/style.css
+++ b/style.css
@@ -1,32 +1,122 @@
+@import url('https://fonts.googleapis.com/css2?family=Slabo+27px&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Slab:wght@100&display=swap');
 * {
   padding: 0;
   margin: 0;
+  font-family: 'Slabo 27px', serif;
 }
+.navbar .show {
+  background: rgb(255, 255, 255);
+}
+.navbar-light .navbar-nav .nav-link.active {
+  color: rgba(255, 255, 255, 0.9);
+}
+.navbar-light .navbar-collapse.show .navbar-nav .nav-item .nav-link.active {
+  color: rgb(0, 0, 0);
+}
+
 #contact {
-  background-image: url('./img/bg2.svg');
+  background: url('./img/stars.png'), url('./img/mountains_front.png'),
+    url('./img/mountains_behind.png');
+  background-position: center;
   background-size: cover;
+  width: 100%;
+  height: auto;
 }
-#contact #heroimg {
-  max-width: 70%;
+#contact .details a {
+  color: #00ff62;
+}
+#contact .details a:hover {
+  color: rgb(0, 255, 242);
+}
+#contact .form-wrap {
+  background: url('./img/stars.png');
+}
+#contact .form-wrap p {
+  color: white;
+}
+#contact .container {
+  border-radius: 10px;
+  background: rgba(153, 151, 151, 0.308);
+}
+#contact h2 {
+  background: #ffffff;
+  background: -webkit-radial-gradient(
+    circle farthest-corner at center center,
+    #ffffff 0%,
+    #1f80ff 25%,
+    #26f1ff 50%,
+    #8f0ac0 100%
+  );
+  background: -moz-radial-gradient(
+    circle farthest-corner at center center,
+    #ffffff 0%,
+    #1f80ff 25%,
+    #26f1ff 50%,
+    #8f0ac0 100%
+  );
+  background: radial-gradient(
+    circle farthest-corner at center center,
+    #ffffff 0%,
+    #1f80ff 25%,
+    #26f1ff 50%,
+    #8f0ac0 100%
+  );
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 #contact .btn {
   color: black;
   background: linear-gradient(
-    to right,
-    rgba(109, 109, 109, 0.267),
+    to left,
+    rgba(236, 248, 253),
     rgba(0, 195, 255, 0.561)
   );
   border: 0;
 }
 #contact .btn:hover {
   background: linear-gradient(
-    to left,
-    rgba(109, 109, 109, 0.267),
+    to right,
+    rgba(236, 248, 253),
     rgba(0, 195, 255, 0.561)
   );
   transform: scale(1.03);
   transition: 0.7s ease-in-out;
 }
-/* #contact .alert {
-  display: none;
-} */
+#contact .btn-cus {
+  letter-spacing: 0;
+  border-color: rgb(12, 213, 240);
+}
+#contact .btn-cus:hover,
+#contact .btn-cus:active {
+  letter-spacing: 5px;
+}
+#contact .btn-cus:after,
+#contact .btn-cus:before {
+  backface-visibility: hidden;
+  border: 1px solid rgba(#fff, 0);
+  bottom: 0px;
+  content: ' ';
+  display: block;
+  margin: 0 auto;
+  position: relative;
+  transition: all 280ms ease-in-out;
+  width: 0;
+}
+#contact .btn-cus:hover:after,
+#contact .btn-cus:hover:before {
+  backface-visibility: hidden;
+  border-color: rgb(255, 255, 255);
+  transition: width 350ms ease-in-out;
+  width: 70%;
+}
+#contact .btn-cus:hover:before {
+  bottom: auto;
+  top: 0;
+  width: 70%;
+}
+#contact ::placeholder {
+  font-family: 'Josefin Slab', serif;
+  color: rgba(172, 172, 172, 0.815);
+  font-weight: 600;
+}
